<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tracker</string>
    <string name="create_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="or_continue_offline">continue offline</string>
    <string name="welcome_to_tracker"><br>Welcome to </br><br>Tracker</br></string>
    <string name="slogan"><br>The Only Collection App </br><br>You Will Ever Need</br></string>
    <string name="logo">Logo</string>
    <string name="tracker">Tracker</string>
    <string name="todo">TODO</string>
    <string name="or_create_account">or create account</string>
    <string name="home">Home</string>
    <string name="username">username</string>
    <string name="settings">Profile Settings</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_collection">Create Collection</string>
    <string name="add_photo">Add Photo</string>
    <string name="add_collection">Add Collection</string>
    <string name="add_item">Add Item</string>
    <string name="image">Image:</string>
    <string name="goal">Goal:</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="goalAmount">amount</string>
    <string name="search" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="emailHint">johndoe@example.com</string>
    <string name="passwordHint">Password#01</string>
    <string name="nameHint">E.g. John</string>
    <string name="game_button_description">image_of_a_play_button_that_symbolises_a_game</string>
    <string name="sort_button_description">sorting_button_current_state_represents_sorting_by_ascending</string>
    <string name="achievement_button_description">button star badge medal thing represents achievements, achievements you get from doing things on the app</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="date">Date:</string>
    <string name="goalTotal">Total Goal:</string>
    <string name="addImageUrl">Add Image Url</string>
    <string name="camera_Gallery">Open Camera or Gallery</string>
    <string name="SadDudeMonologue">It is a little empty in here.</string>
    <string name="SadDudeInstruction">Click the red plus to add a new collection.</string>
    <string name="shareCollection">Share Collection</string>
    <string name="deleteCollection">Delete Collection</string>
    <string name="itemDetails">Item Details</string>
    <string name="itemDateHint">Choose date (Rough Estimate)</string>
    <string name="itemDescHint">E.g Batman Book Description</string>
    <string name="itemNameHint">E.g Batman Book</string>
    <string name="collectionNameHint">Collection Name</string>
    <string name="collectionDescHint">Description</string>
    <string name="collectionGoalHint">E.g 15 (Total number in collection?)</string>
    <string name="item_image">Item Image</string>
    <string name="save">Save</string>
    <string name="EditCollection">Edit Collection</string>
    <string name="optionsPanel">Options</string>
    <string name="deleteItem">Delete Item</string>
    <string name="shareItem">Share Item</string>
    <string name="notes">Notes:</string>
    <string name="dateHint">E.g. 20 Sep 1999</string>
    <string name="imageOptionsPanel">Image Options</string>
    <string name="image_url">Image Url</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_url">add url</string>
    <string name="delete">Delete?</string>
    <string name="holdertext">holderText</string>
    <string name="game">Game</string>
    <string name="completed">Completed</string>
    <string name="yes_no">No</string>
    <string name="achievement">Achievements</string>
</resources>