<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_url_dialog"
    android:orientation="vertical"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="25dp"
    android:background="@drawable/dialog_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_url"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:background="@color/light_black"
        android:layout_marginBottom="15dp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_image_url"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:padding="10dp"
            android:alpha="0.9"
            android:background="@color/white"
            android:inputType="text"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginStart="55dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btn_add_url"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/button_shape"
            android:text="@string/add_url"
            android:textColor="@color/white"
            app:backgroundTint="@null" />
    </LinearLayout>

</LinearLayout>